<resources>
    <string name="app_name">Vistas Personalizadas</string>

    <string name="titulo">Welcome!</string>
    <string name="subtitulo">We hope you enjoy\n the stay!</string>
    <string name="nombre">Full name</string>
    <string name="correo">Email</string>
    <string name="telefono">Mobile Number</string>
    <string name="boton">Log In</string>
    <string name="termino1">By signing up you confirm that you have read &amp; agree to th our</string>
    <string name="termino2"><u>Privacy Policy </u> and <u>Terms &amp; Conditions</u></string>
</resources>