<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo1"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.7">
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="@color/colorBlanco"
                android:gravity="center_horizontal"
                android:textSize="50sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBlanco"
                android:layout_marginTop="10dp">
            </View>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/colorBlanco"
                android:textColor="@color/colorBlanco"
                android:backgroundTint="@color/colorBlanco"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:textColorHint="@color/colorBlanco"
                android:textColor="@color/colorBlanco"
                android:backgroundTint="@color/colorBlanco"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:textColorHint="@color/colorBlanco"
                android:textColor="@color/colorBlanco"
                android:backgroundTint="@color/colorBlanco"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/fondo_boton"
                android:textColor="@color/colorBlanco"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawableLeft="@android:drawable/ic_dialog_email"
                android:drawablePadding="10dp"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termino1"
        android:textColor="@color/colorBlanco"
        android:textSize="10sp"
        android:gravity="center_horizontal"
        android:layout_above="@+id/termino2"/>
    <TextView
        android:id="@+id/termino2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termino2"
        android:textColor="@color/colorBlanco"
        android:textSize="10sp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>




